--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Malanius Privierre <malaniusprivierre@gmail.com>"]
 python = "^3.10"
 requests = "^2.27.1"
 python-dotenv = "^0.20.0"
+rich = "^12.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
