--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,11 @@ rich = "^12.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
-black = {version = "^22.3.0", allow-prereleases = true}
+black = { version = "^22.3.0", allow-prereleases = true }
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-export = "toggl_export.export:main"
+toggl-export = "toggl_export.export:main"
