--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ rich = "^12.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
-black = { version = "^22.3.0", allow-prereleases = true }
+
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.1.6"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
