--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.12"
 requests = "^2.27.1"
 python-dotenv = "^0.20.0"
 rich = "^12.5.1"
+loguru = "^0.7.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
