--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requests = "^2.27.1"
 python-dotenv = "^0.20.0"
 rich = "^12.5.1"
 loguru = "^0.7.2"
+pyperclip = "^1.8.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.6"
