--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,26 @@
-[tool.poetry]
+[project]
 name = "toggl-export"
 version = "0.1.0"
 description = ""
-authors = ["Malanius Privierre <malaniusprivierre@gmail.com>"]
+readme = "README.md"
+authors = [
+    { name = "Malanius Privierre", email = "malaniusprivierre@gmail.com" },
+]
+requires-python = ">=3.12"
+dependencies = [
+    "loguru>=0.7.2",
+    "pyperclip>=1.9.0",
+    "python-dotenv>=1.0.1",
+    "requests>=2.32.3",
+    "rich>=13.9.1",
+]
 
-[tool.poetry.dependencies]
-python = "^3.12"
-requests = "^2.27.1"
-python-dotenv = "^0.20.0"
-rich = "^12.5.1"
-loguru = "^0.7.2"
-pyperclip = "^1.8.2"
-
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.1.6"
-pytest = "^7.4.3"
+[project.scripts]
+toggl-export = "toggl_export.export:main"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.poetry.scripts]
-toggl-export = "toggl_export.export:main"
+[tool.uv]
+dev-dependencies = ["pytest>=8.3.3", "ruff>=0.6.8"]
