test: add pytest-mock

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,4 +23,8 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.uv]
-dev-dependencies = ["pytest>=8.3.3", "ruff>=0.6.8"]
+dev-dependencies = [
+    "pytest-mock>=3.14.0",
+    "pytest>=8.3.3",
+    "ruff>=0.6.8",
+]
